// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderLedger Component OrderLedger should render correctly 1`] = `
<View>
  <Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined (1):"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="0.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="0.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(LineComp)
      borderColor="gray.600"
      borderWidth={1}
      marginBottom={10}
      marginTop={10}
    />
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="0.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Connect(LoyaltyBannerContainer)
      isConfirmationPage={false}
      pageCategory={Object {}}
    />
  </Styled(View)>
</View>
`;

exports[`OrderLedger Component OrderLedger should render correctly 2`] = `
<View>
  <Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined (1):"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="-1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="-1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(LineComp)
      borderColor="gray.600"
      borderWidth={1}
      marginBottom={10}
      marginTop={10}
    />
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="-1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="undefined:"
          textAlign="left"
          textDecoration={null}
        />
      </Text>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="undefined"
          textAlign="left"
          textDecoration={null}
        />
        <Styled(View)>
          <ReactTooltip
            backgroundColor="#fff"
            height={96}
            onClose={[Function]}
            onOpen={[Function]}
            overlayColor="rgba(250, 250, 250, 0.80)"
            pointerColor="#fff"
            popover={
              <ForwardRef
                accessibilityText=""
                color="gray.900"
                dataLocator=""
                fontFamily="secondary"
                fontSize="fs13"
                fontWeight="semibold"
                margin={null}
                numberOfLines={null}
                textDecoration={null}
              />
            }
            toggleOnPress={true}
            width={240}
            withOverlay={false}
            withPointer={true}
          >
            <Styled(ImageComp)
              alt=""
              height={15}
              host=""
              source={
                Object {
                  "testUri": "../../../../core/src/assets/info-icon.png",
                }
              }
              url=""
              width={15}
            />
          </ReactTooltip>
        </Styled(View)>
      </Styled(View)>
      <Text>
        <Styled(BodyCopy)
          accessibilityText=""
          bodySize="one"
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="1.00"
          textAlign="right"
          textDecoration={null}
        />
      </Text>
    </Styled(View)>
    <Connect(LoyaltyBannerContainer)
      isConfirmationPage={false}
      pageCategory={Object {}}
    />
  </Styled(View)>
</View>
`;
